tests/ui/typeck/bad-type-in-vec-push.stderr
error[E0308]: mismatched types
  --> $DIR/bad-type-in-vec-push.rs:11:17
   |
LL |     vector.sort();
   |     ------ here the type of `vector` is inferred to be `Vec<_>`
LL |     result.push(vector);
   |            ---- ^^^^^^
   |            |    |
   |            |    expected integer, found struct `Vec`
   |            |    this is of type `Vec<_>`, which causes `result` to be inferred as `Vec<{integer}>`
   |            arguments to this method are incorrect
   |
   = note: expected type `{integer}`
            found struct `Vec<_>`
note: associated function defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
